--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "homepage": "https://github.com/aojpauga/todo-server#readme",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
